Fix blank whitespace

--- a/client/components/Canvas/style.scss
+++ b/client/components/Canvas/style.scss
@@ -1,4 +1,5 @@
 .imageDisplay {
+  border-radius: $border-radius;
   max-width: 50%;
   max-height: 500px;
   padding: 20px;
