--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -32,7 +32,7 @@
   }
 }
 
->>>>>>>af0e012 (Merged) .text-container > h1 {
+.text-container > h1 {
   margin: 0;
 }
 
@@ -68,7 +68,6 @@
 
 html,
 body {
-  background-color: white;
   padding: 0;
   margin: 0;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
